CSS scroll fix - Scroll in #help and #settings now won't overlap round borders. - Also added a hover effect to the scroll bar.

--- a/main/style.css
+++ b/main/style.css
@@ -192,28 +192,35 @@ img {
   border: .3rem solid grey;
   border-radius: 1rem;
   font-family: monospace;
-  max-width: 75%;
-  padding: 1rem;
-  max-height: 75%;
-  overflow: auto;
+  width: 75%;
+  height: 75%;
 }
 
-.optionbox::-webkit-scrollbar {
+.optionboxchild {
+  width: 100%;
+  height: calc(100% - 0.8rem);
+  overflow: auto;
+  padding: 1rem;
+  box-sizing: border-box;
+  margin: .4rem 0;
+}
+
+::-webkit-scrollbar {
   width: 10px;
 }
 
-.optionbox::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   border-radius: 2px;
 }
 
-.optionbox::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background: #3b322b; 
   border-radius: 10px;
 }
 
-/*.optionbox::-webkit-scrollbar-thumb:hover {
-  background: #666666;*/
-
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(61, 61, 61);
+}
 
 /* ========== #host ========== */
 
